--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,8 @@
 platform = atmelavr
 board = uno
 framework = arduino
+
+lib_deps =
+    adafruit/Adafruit SSD1306@^2.5.13
+    adafruit/Adafruit GFX Library@^1.11.11
+    adafruit/Adafruit BusIO@^1.16.2
